Enhance Goals Monthly Chart with auto-refresh functionality and Xrm context access

--- a/src/client/Pg.LetsExercise.WebResources/html/goalsmonthlychart.html
+++ b/src/client/Pg.LetsExercise.WebResources/html/goalsmonthlychart.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chart.js Bar Chart Example</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="../scripts/goalsmonthlychart.js"></script>
 </head>
 
 <body>
     <h1>Autorefreshed chart with Chart.js library</h1>
     <canvas id="myChart" width="400" height="200"></canvas>
     <script>
+        if (LetsExercise && LetsExercise.GoalsMonthlyChart) {
+            // Create an instance of GoalsMonthlyChart and execute it
+            const chart = new LetsExercise.GoalsMonthlyChart();
+            chart.execute();
+        } else {
+            console.log("LetsExercise.GoalsMonthlyChart is not defined");
+        }
         const labels = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
         const data = {
             labels: labels,
